Fixed misaligned input dropdown menus in the InputForm.jsx component.

--- a/frontend/src/styles/InputForm.css
+++ b/frontend/src/styles/InputForm.css
@@ -22,10 +22,9 @@
     margin: auto;
 }
 
-/* method select dropdown */
-#methodDropdown {
+/* dropdown lists */
+#taskInputs select {
     text-align: center;
-    width: 7vw;
 }
 
 
